[tool.poetry]
name = "dip"
version = "0.1.0"
description = ""
authors = ["Václav Belák <vaclav@belak.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
seaborn = "^0.13.0"
jupyterlab = "^4.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
